fix(backdrop): set css `position: fixed` to `md-backdrop`
Ensures the md-backdrop element will always cover the view port.

--- a/src/components/backdrop/backdrop.scss
+++ b/src/components/backdrop/backdrop.scss
@@ -18,7 +18,7 @@ md-backdrop {
 
   background-color: rgba(0,0,0,0);
 
-  position: absolute;
+  position: fixed;
   height: 100%;
   left: 0;
   right: 0;
